<resources>
    <string name="app_name">HackSpace</string>

    <!--region REGISTRATION-->
    <string name="registration_title">Регистрация</string>
    <string name="registration_login">Логин</string>
    <string name="registration_password">Пароль</string>
    <string name="registration_email">Email</string>
    <string name="registration_sign_up">Зарегистрироваться</string>
    <string name="registration_has_account">Есть аккаунт?</string>
    <string name="registration_sign_in">Войти</string>
    <string name="registration_empty_email_error">Пожалуйста, введите email адрес</string>
    <string name="registration_invalid_email_error">Пожалуйста, введите валидный email адрес</string>
    <string name="registration_empty_password">Пожалуйста, введите пароль</string>
    <string name="registration_empty_login">Пожалуйста, введите логин</string>
    <string name="registration_success_signup">Вы успешно зарегестрированы</string>
    <!--endregion-->

    <!--region AUTHORIZATION-->
    <string name="authorization_title">Вход</string>
    <string name="authorization_sign_in">Войти</string>
    <string name="authorization_not_signed_up">Не зарегистрированы?</string>
    <string name="authorization_sign_up">Зарегистрироваться</string>
    <string name="authorization_empty_email_error">Пожалуйста, введите email адрес</string>
    <string name="authorization_invalid_email_error">Пожалуйста, введите валидный email адрес</string>
    <string name="authorization_empty_password">Пожалуйста, введите пароль</string>
    <!--endregion-->

    <!--region QR SCANNER-->
    <string name="qr_scanner_title">QR Сканнер</string>
    <string name="qr_scanner_confirm">Подтвердите свое участие</string>
    <string name="qr_scanner_hint">Наведите камеру на QR код</string>
    <string name="qr_scanner_validation_error">Не валидный QR код</string>
    <string name="qr_scanner_loading">Подождите пожалуйста…</string>
    <!--endregion-->

    <!--region MAIN-->
    <string name="main_bottom_nav_hackathons">Хакатоны</string>
    <string name="main_bottom_nav_qr_scanner">QR сканнер</string>
    <string name="main_bottom_nav_profile">Профиль</string>
    <!--endregion-->

    <!--region HACKATHONS-->
    <string name="hackathons_title">HackSpace</string>
    <string name="hackathons_search">Поиск</string>
    <string name="hackathons_about">О приложении</string>
    <string name="vh_hackathon_date">%1$s - %2$s</string>
    <!--endregion-->

    <!--region HACKATHON DETAILS-->
    <string name="hackathon_detail_start_title">Начало</string>
    <string name="hackathon_detail_end_title">Конец</string>
    <string name="hackathon_detail_location_title">Местоположение</string>
    <string name="hackathon_detail_tag_title">#%s</string>
    <string name="hackathon_detail_tasks_title">Задания</string>
    <string name="hackathon_detail_participants_title">Участники</string>
    <string name="hackathon_detail_teams_title">Команды</string>
    <string name="hackathon_detail_description">Описание</string>
    <string name="hackathon_detail_criteria">Критерии</string>
    <string name="hackathon_detail_rules">Правила</string>
    <string name="hackathon_detail_participate">Участвовать!</string>
    <string name="hackathon_detail_refuse_participation">Отказаться от участия</string>
    <string name="hackathon_detail_success_unregister">Регистрация успешно отменена</string>
    <string name="hackathon_detail_unregister_text">Вы действительно хотите отказаться от участия?</string>
    <string name="hackathon_detail_unregister_yes">Да</string>
    <string name="hackathon_detail_unregister_cancel">Отмена</string>
    <!--endregion-->

    <!--region HACKATHON REGISTRATION-->
    <string name="hackathon_registration_title">Регистрация на хакатон</string>
    <string name="hackathon_registration_participation_methods">Пожалуйста, выберите способ участия в хакатоне</string>
    <string name="hackathon_registration_confirm_participation">Подтвердить участие</string>
    <string name="hackathon_registration_standalone">Я буду участвовать один</string>
    <string name="hackathon_registration_searching_for_team">Я ищу команду</string>
    <string name="hackathon_registration_with_team">У меня есть команда</string>
    <string name="hackathon_registration_success_registration">Вы успешно зарегестрированы</string>
    <!--endregion-->

    <!--region HACKATHON CONFIRMATION-->
    <string name="hackathon_confirmation_title">Подтверждение участия</string>
    <string name="hackathon_confirmation_confirmed">Участие успешно подтверждено</string>
    <string name="hackathon_confirmation_go_to_hackathon">Перейти к хакатону</string>
    <!--endregion-->

    <!--region PROFILE-->
    <string name="profile_full_name">%1$s %2$s</string>
    <string name="profile_participated_hackathons">Принимает участие</string>
    <string name="profile_own_hackathons">Организовывает</string>
    <string name="profile_name_undefined">Имя не указано</string>
    <string name="profile_logout_message">Вы действительно хотите выйти из аккаунта?</string>
    <string name="profile_logout_yes">Да</string>
    <string name="profile_logout_cancel">Отмена</string>
    <!--endregion-->

    <!--region PARTICIPANTS-->
    <string name="participants_title">Участники</string>
    <string name="participants_full_name">%1s %2s</string>
    <string name="participants_name_undefined">Имя не указано</string>
    <string name="participants_login">\@%1$s</string>
    <string name="participants_identification">Это вы :)</string>
    <string name="participants_invite_to_team">Пригласить в команду</string>
    <string name="participants_no_participants">Список участников пуст</string>
    <string name="participants_invite_sent">Приглашение успешно отправлено</string>
    <!--endregion-->

    <!--region TEAMS-->
    <string name="teams_title">Команды</string>
    <string name="teams_create_team">Создать команду</string>
    <string name="teams_leave_team">Покинуть команду</string>
    <string name="teams_remove_team">Удалить команду</string>
    <string name="teams_team_management">Управление командой</string>
    <string name="teams_participants">участников</string>
    <string name="teams_empty_list">Нет команд</string>
    <string name="teams_success_team_remove">Команда успешно удалена</string>
    <string name="teams_fail_team_remove">Не удалось удалить команду</string>
    <string name="teams_success_user_kick">Вы успешно удалили пользователя</string>
    <string name="teams_success_left_team">Вы успешно покинули команду</string>

    <plurals name="participants_plurals">
        <item quantity="zero">%1$d участников</item>
        <item quantity="one">%1$d участник</item>
        <item quantity="two">%1$d участника</item>
        <item quantity="few">%1$d участника</item>
        <item quantity="many">%1$d участников</item>
        <item quantity="other">%1$d участники</item>
    </plurals>

    <string name="dlg_team_create">Создать</string>
    <string name="dlg_team_cancel">Отмена</string>
    <string name="dlg_team_title">Создание команды</string>
    <string name="dlg_team_empty_field">Заполните поле</string>
    <string name="dlg_team_name">Название команды</string>
    <string name="dlg_team_management_title">Управление участниками</string>
    <string name="dlg_team_management_remove">Удалить</string>
    <string name="dlg_team_management_close">Закрыть</string>
    <!--endregion-->

    <!--region NOTIFICATIONS-->
    <string name="notifications_title">Уведомления</string>
    <string name="notifications_invitation_accept">Принять</string>
    <string name="notifications_remove">Удалить</string>
    <string name="notifications_invitation_message">&lt;b>%1$s&lt;/b> приглашает вас в свою команду</string>
    <string name="notifications_invitation_accepted">Приглашение успешно принято</string>
    <string name="notifications_review_message">Поделитесь впечатлениями</string>
    <string name="notifications_review_feedback">Как прошел</string>
    <string name="notifications_empty_list">Нет уведомлений</string>
    <string name="notifications_review_give_feedback">Оставить отзыв</string>
    <string name="notifications_review_comment">Комментарий (не обязательно)</string>
    <string name="notifications_review_form_title">Как вам %1$s?</string>
    <string name="notifications_review_form_send">Отправить</string>
    <string name="notifications_review_form_cancel">Отмена</string>
    <string name="notifications_review_form_error">Поставьте оценку</string>
    <string name="notifications_review_form_success">Отзыв успешно отправлен</string>
    <!--endregion-->

    <!--region ABOUT-->
    <string name="about_title">О приложении</string>
    <string name="about_description">HackSpace является важным инструментом и
        существует из-за отсутствия высококачественного программного обеспечения,
        которое могло бы координировать и управлять несколькими хакатонами в одном месте,
        не имея отдельного сайта или приложения, уникального для этого хакатона.</string>
    <string name="about_icons_made">Иконки сделаны:</string>
    <string name="about_ant_design_source">Ant Design</string>
    <string name="about_from_source">из</string>
    <string name="about_ant_design_site">www.ant.design</string>
    <string name="about_freepik_source">Freepik</string>
    <string name="about_flaticon_site">www.flaticon.com</string>
    <string name="about_pixel_perfect_source">Pixel perfect</string>
    <string name="about_leave_review">Оставить отзыв</string>
    <!--endregion-->

    <!--region TASKS-->
    <string name="tasks_title">Задания</string>
    <string name="tasks_empty_list">Нет заданий</string>
    <!--endregion-->
</resources>
