<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".presentation.sign_in.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp">

        <TextView
            style="@style/PrimaryBoldTextView20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/authorization_name" />

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_close" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/InputTextOutlined"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:paddingBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietEmail"
            style="@style/MaterialEditText14"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="8dp"
            android:hint="@string/registration_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/InputTextOutlined"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:paddingBottom="8dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorGray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPassword"
            style="@style/MaterialEditText14"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:hint="@string/registration_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/llSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:padding="12dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/shape_button_primary"
        android:foreground="?android:attr/selectableItemBackground">

        <ProgressBar
            android:id="@+id/ivButtonProgress"
            android:theme="@style/CircularProgress"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:visibility="gone"/>

        <TextView
            style="@style/PrimaryTextView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authorization_sign_in"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            style="@style/SecondaryTextView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/authorization_not_signed_up" />

        <TextView
            android:id="@+id/tvSignUp"
            style="@style/AccentTextView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authorization_sign_up"
            android:foreground="?android:attr/selectableItemBackground"/>
    </LinearLayout>
</LinearLayout>