<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:foreground="?android:attr/selectableItemBackground" >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civAvatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnRemoveParticipant"
        app:layout_constraintStart_toEndOf="@+id/civAvatar"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvFullName"
            style="@style/PrimaryBoldTextView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/tvLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/civAvatar"
            app:layout_constraintTop_toTopOf="@+id/civAvatar"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Индира Темкешева" />

        <TextView
            android:id="@+id/tvLogin"
            style="@style/PrimaryTextView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/civAvatar"
            app:layout_constraintTop_toBottomOf="@+id/tvFullName"
            tools:text="\@indiratemk" />

        <Button
            android:id="@+id/btnInvite"
            style="@style/RoundedPrimaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="8dp"
            android:text="@string/participants_invite_to_team"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/civAvatar"
            app:layout_constraintTop_toBottomOf="@+id/civAvatar" />

        <TextView
            android:id="@+id/tvIdentification"
            style="@style/PrimaryTextView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/shape_green_border"
            android:padding="4dp"
            android:text="@string/participants_identification"
            android:textColor="@color/colorGreen200"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/civAvatar"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRemoveParticipant"
        style="@style/RoundedErrorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="0dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/dlg_team_management_remove"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>